Add Maven support for fetching snapshot source jars. Fix recently introduced bugs.